# cinderx

./: .gitignore  CMakeLists.txt  README.md  findings.md  notes.md  progress.md  pyproject.toml  setup.py  task_plan.md
.github/workflows/: publish.yml
artifacts/deepcopy/: reg_base.json  reg_base_focus.json  reg_compare.json  reg_current.json  reg_current_focus.json  reg_focus_compare.json
artifacts/richards/: arm_after_guardgap_fold_s8.json  arm_after_guardgap_fold_s8_summary.json  arm_baseline_postalloc_ab_s8_clean_20260221_084809.json  arm_postalloc_ab_s8_clean_20260221_085811.json  arm_samples_20260221_091757.json  guardgap_fold_shape_compare_20260221.json  postalloc_hotpath_vs_baseline_s8_summary_20260221.json  summary_arm_vs_x86_20260221_091757.json  summary_autojit50_20260221_091757.json  summary_jitlist_20260221_091757.json  summary_nojit_20260221_091757.json  x86_samples_20260221_091757.json
cinderx/: _cinderx-lib.cpp  python.h
cinderx/Common/: py-portability.h  util.h
cinderx/Interpreter/: interpreter.h  interpreter_base.cpp
cinderx/Jit/: bytecode.cpp  bytecode.h  code_allocator.cpp  compiler.cpp  compiler.h  config.h  context.cpp  deopt.cpp  frame.cpp  generators_rt.cpp  global_cache.cpp  global_cache.h  global_cache_optimized.cpp  global_cache_optimized.h  guide.md  inline_cache.cpp  inline_cache.h  jit_list.cpp  jit_rt.cpp  jit_rt.h  pyjit.cpp  pyjit.h
cinderx/PythonLib/: cinderx.pth
cinderx/RuntimeTests/: CMakeLists.txt  backend_test.cpp  cmdline_test.cpp  fixtures.h  lir_abi_test.cpp  main.cpp  testutil.cpp
cinderx/RuntimeTests/hir_tests/: float_compare_elimination_test.txt  guarded_load_elimination_test.txt  list_slice_cleanup_test.txt  long_loop_unboxing_test.txt  simplify_test.txt
cinderx/StaticPython/: vtable_defs.c
cinderx/TestScripts/: cinder_test_runner312.py
cinderx/UpstreamBorrow/: borrowed-3.14.c.template  borrowed-3.14.free-threading.c.template  borrowed-3.14.free-threading.gen_cached.c  borrowed-3.14.gen_cached.c  borrowed-3.15.c.template  borrowed-3.15.gen_cached.c  borrowed.h
docker/cinderx-test/: README.md  docker-compose.yml
docker/cpython-baseline/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docs/: pgo-lto-pyperformance-change-notes.md  pgo-lto-pyperformance-design.md  pgo-lto-pyperformance-self-validation.md
docs/architecture/: cinderx-architecture-spec-option-a-formal.md  cinderx-architecture-spec-option-b-branch-handbook.md  code-model-diagram.md  context-model-pyperformance-simple.md  context-model-pyperformance.md  context-model.md  deployment-delivery-model.md  deployment-model.md  runtime-model.md
docs/plans/: 2026-02-20-aarch64-hot-call-lowering-design.md  2026-02-20-aarch64-hot-call-lowering-plan.md  2026-02-20-arm-vs-x86-richards-optimization-design.md  2026-02-20-arm-vs-x86-richards-optimization-plan.md  2026-02-24-enable-adaptive-static-python-arm-314.md  2026-02-24-enable-adaptive-static-python-arm-design.md  2026-02-25-enable-lightweight-frames-314-arm-design.md  2026-02-25-enable-lightweight-frames-314-arm.md  2026-02-27-aarch64-mcs-invalid-displacement-fix.md  2026-02-27-branch-optimizations-vs-upstream-design.md  2026-02-27-dump-elf-machine-arch-fix.md  2026-03-02-static-python-compile-toggle.md  2026-03-05-primitive-unbox-cse.md  2026-03-10-load-global-mutable-int-guard-fix.md  2026-03-10-raytrace-cpython-vs-cinderx-jit-analysis.md  2026-03-27-xml-etree-benchmark-jit-guard-design.md  2026-03-27-xml-etree-benchmark-jit-guard-report.md  2026-03-28-xml-etree-vectorcall-postalloc-design.md  2026-03-28-xml-etree-vectorcall-postalloc-report.md  2026-03-29-issue4-unpickle-tobool-none-analysis.md  2026-03-30-issue4-go-vs-unpickle-root-cause-analysis.md  2026-03-31-pyperformance-nbody-jit-enable-report.md  2026-04-02-cpython-314-only-isolation-followup.md  2026-04-02-static-python-isolation-followup.md  2026-04-08-arm-cpu-tuning-usage.md
md/: GLOBAL_CACHE_OPTIMIZATION.md
plans/: arm_jit_perf.md  deepcopy-issue.md  deepcopy-mistake-ledger.md  deepcopy-notes.md  deepcopy-proposal.md  deepcopy-task-plan.md  richards-code-review.md  richards-issue.md  richards-mistake-ledger.md  richards-notes.md  richards-proposal.md  richards-task-plan.md
plans/2026-03-10-getlength-unboxing/: deliverable.md  findings.md  notes.md  task_plan.md
plans/2026-03-10-issue14-floatcompare/: notes.md  task_plan.md
plans/2026-03-10-issue14-remote-review/: notes.md  task_plan.md
plans/2026-03-10-issue17-global-load-cse/: notes.md  task_plan.md
plans/2026-03-10-issue18-list-slice/: notes.md  task_plan.md
plans/2026-03-11-load-global-mutable-guard/: deliverable.md  findings.md  notes.md  task_plan.md
plans/2026-03-12-float-accumulator-entry-promotion/: deliverable.md  findings.md  notes.md  task_plan.md
plans/2026-03-12-generators-attr-decref/: deliverable.md  findings.md  notes.md  task_plan.md
plans/2026-03-12-issue23-speculative-unboxing/: notes.md  task_plan.md
plans/2026-03-13-float-power-square-strength-reduction/: deliverable.md  findings.md  notes.md  task_plan.md
plans/2026-03-13-inline-math-sqrt-from-import/: deliverable.md  findings.md  notes.md  task_plan.md
plans/2026-03-14-issue36-set-genexpr-inline/: notes.md  task_plan.md
plans/2026-03-14-istruthy-bool-fastpath/: deliverable.md  findings.md  notes.md  task_plan.md
plans/2026-03-14-unpack-sequence-bimorphic/: deliverable.md  findings.md  notes.md  task_plan.md
plans/2026-03-15-coroutines-hir-lir-fix/: notes.md  task_plan.md
plans/2026-03-15-generators-pyperf-hir-lir/: deliverable.md  issue_body.md  mr_reply.md  notes.md  (+1 more)
scripts/: push_to_arm.ps1
tests/: README.md  run_test_suites.py  test_arm_pyperf_speedup_summary.py  test_cinderx_adaptive_static_api.py  test_cinderx_lightweight_frames_api.py  test_compat_policy.py  test_project_metadata.py  test_pyperf_env_hook.py  test_remote_entrypoint_contract.py  test_run_pyperf_suite_direct.py  test_run_test_suites.py  test_runtime_support_policy.py  test_setup_adaptive_static_python.py  test_setup_lightweight_frames.py  test_setup_pgo_validation.py  test_setup_pgo_workload_retries.py
(+145 files in other folders)
